// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArenaIcon renders 1`] = `
<svg
  className="lexicon-icon lexicon-icon-cool-icon"
  role="presentation"
>
  <use
    xlinkHref="/path/to/some/resource.svg#cool-icon"
  />
</svg>
`;

exports[`ArenaIcon renders with context spritemap 1`] = `
<svg
  className="lexicon-icon lexicon-icon-cool-icon"
  role="presentation"
>
  <use
    xlinkHref="foo/bar.svg#cool-icon"
  />
</svg>
`;
